# blitz-models

./: .gitignore  LICENSE  README.md  models.py  pyproject.toml  requirements.txt  utils.py  wg.py  wotinspector.py
.github/workflows/: codeql.yml  python-package-macos-win.yml  python-package.yml
src/blitzmodels/: __init__.py  account.py  config.py  map.py  maps.json  region.py  release.py  replay.py  tank.py  tanks.json  types.py  wg_api.py
src/blitzmodels/wotinspector/: __init__.py  wi_apiv1.py  wi_apiv2.py
src/blitzutils/: __init__.py  account.py  config.py  map.py  models.py  region.py  release.py  replay.py  tank.py  wg.py  wg_api.py  wi_apiv2.py  wotinspector.py
src/blitzutils/wotinspector/: __init__.py  wi_apiv1.py  wi_apiv2.py
tests/: 01_Tankopedia.json  01_Tanks.json  01_WGTanks.json  02_Releases.csv  03_Accounts.csv  03_Accounts1.txt  03_Accounts2.txt  04_Accounts_Asia.csv  04_Accounts_Com.csv  04_Accounts_EU.csv  05_Maps_new.json  05_Maps_old.json  05_maps.json  05_maps.yaml  05_maps_old.json  06_WGApiTankString.json  20200229_2321__jylpah_E-50_fort.wotbreplay  20200229_2321__jylpah_E-50_fort.wotbreplay.json  20200229_2324__jylpah_E-50_erlenberg.wotbreplay  20200229_2324__jylpah_E-50_erlenberg.wotbreplay.json  20200229_2328__jylpah_E-50_grossberg.wotbreplay  20200229_2328__jylpah_E-50_grossberg.wotbreplay.json  20200229_2332__jylpah_E-50_lumber.wotbreplay  20200229_2332__jylpah_E-50_lumber.wotbreplay.json  20200229_2337__jylpah_E-50_skit.wotbreplay  20200229_2337__jylpah_E-50_skit.wotbreplay.json  20200229_2341__jylpah_E-50_erlenberg.wotbreplay  20200229_2341__jylpah_E-50_erlenberg.wotbreplay.json  20200229_2344__jylpah_E-50_rock.wotbreplay  20200229_2344__jylpah_E-50_rock.wotbreplay.json  20200229_2349__jylpah_E-50_himmelsdorf.wotbreplay  20200229_2349__jylpah_E-50_himmelsdorf.wotbreplay.json  20200229_2353__jylpah_E-50_fort.wotbreplay  20200229_2353__jylpah_E-50_fort.wotbreplay.json  20200301_0022__jylpah_E-50_rudniki.wotbreplay  20200301_0022__jylpah_E-50_rudniki.wotbreplay.json  20200301_0026__jylpah_E-50_himmelsdorf.wotbreplay  20200301_0026__jylpah_E-50_himmelsdorf.wotbreplay.json  20200301_0030__jylpah_E-50_rift.wotbreplay  20200301_0030__jylpah_E-50_rift.wotbreplay.json  (+12 more)
