[project]
name = "blitz-models"
version = "1.0.4"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
description = "Pydantic models for Wargaming's World of Tanks Blitz game "
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: aiohttp",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles~=23.1.0",
    "aiohttp~=3.8.4",
    "aiosqlite~=0.19.0",
    "isort~=5.12.0",
    "pyarrow~=11.0.0",
    "pydantic~=2.4.2",
    "pymongo~=4.6.1",
    "pyutils @ git+https://github.com/Jylpah/pyutils.git@main-1.0",
    "pydantic-exportables @ git+https://github.com/Jylpah/pydantic-exportables.git",
]

[project.optional-dependencies]
dev = [
    "build~=0.10.0",
    "mypy~=1.7.2",
    "pip-chill~=1.0.3",
    "pip-audit~=2.6.1",
    "pytest~=2.2.0",
    "pytest-asyncio~=0.23.2",
    "pytest-datafiles~=3.0.0",
    "pytest-cov~=4.1.0",
    "pytest-timeout~=2.2.0",
    "types-aiofiles~=23.1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/Jylpah/blitz-models"
"Bug Tracker" = "https://github.com/Jylpah/blitz-models/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blitzmodels"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[tool.black]
# line-length = 88
include = '\.pyi?$'


[tool.pyright]
reportGeneralTypeIssues = false
reportInvalidStringEscapeSequence = false


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src"
filterwarnings = [
    'ignore:Inheritance class ThrottledClientSession from ClientSession is discouraged:DeprecationWarning',
    'ignore:legacy JSON format is depreciated:DeprecationWarning',
]
