[project]
name = "blitz-models"
version = "1.0.6"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
description = "Pydantic models for Wargaming's World of Tanks Blitz game "
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: aiohttp",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles>=23.1",
    "aiohttp>=3.9.1",
    "aiosqlite>=0.19",
    "isort>=5.12",
    "pyarrow>=14.0.1",
    "pydantic>=2.4",
    "pymongo>=4.6",
    "pyutils @ git+https://github.com/Jylpah/pyutils.git@main-1.0",
    "pydantic-exportables @ git+https://github.com/Jylpah/pydantic-exportables.git",
]

[project.optional-dependencies]
dev = [
    "build>=0.10",
    "mypy>=1.7",
    "pip-chill>=1.0",
    "pip-audit>=2.6",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-datafiles>=3.0",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "ruff>=0.1.9",
    "types-aiofiles>=23.1",
]

[project.urls]
"Homepage" = "https://github.com/Jylpah/blitz-models"
"Bug Tracker" = "https://github.com/Jylpah/blitz-models/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blitzmodels"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[tool.ruff]
# line-length = 88
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
indent-width = 4
extend-include = ["*.ipynb"]
fixable = ["ALL"]


[tool.pyright]
reportGeneralTypeIssues = false
reportInvalidStringEscapeSequence = false


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src"
filterwarnings = [
    'ignore:Inheritance class ThrottledClientSession from ClientSession is discouraged:DeprecationWarning',
    'ignore:legacy JSON format is depreciated:DeprecationWarning',
]
